Added: Base class for game tests

--- a/ATProject/Config/DefaultEngine.ini
+++ b/ATProject/Config/DefaultEngine.ini
@@ -85,3 +85,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++StructRedirects=(OldName="/Script/ATProject.Result",NewName="/Script/ATProject.GameTestResult")
