Added: Charts for data

--- a/ATProject/Config/DefaultEngine.ini
+++ b/ATProject/Config/DefaultEngine.ini
@@ -70,6 +70,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="ATProjectProjectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="ATProjectGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="ATProjectCharacter")
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=19.117647),UpperBound=(Type=Exclusive,Value=200.000000))
+bSmoothFrameRate=False
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -88,3 +90,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +StructRedirects=(OldName="/Script/ATProject.Result",NewName="/Script/ATProject.GameTestResult")
+
